--- a/datacenter/layouts/partials/components/services/dedic/_dedic-table.html
+++ b/datacenter/layouts/partials/components/services/dedic/_dedic-table.html
@@ -1,6 +1,6 @@
 <div class="table">
     <div class="table__body table__body_dedicated table__body_loading">
-        @@include('../../base/_calculator-configurator.html')
+     {{partial "components/base/_calculator-configurator.html"}}
     </div>
 </div>
 <p class="paragraph">Под заказ (2-5 рабочих дней) доступны любые конфигурации серверов.</p>
