--- a/datacenter/layouts/shortcodes/services/other/ssl.html
+++ b/datacenter/layouts/shortcodes/services/other/ssl.html
@@ -10,9 +10,7 @@
             <p>Описание</p>
             <p>Стоимость BYN с НДС, в год</p>
         </div>
-        <div class="table__body table__body_loading" id="ssl">
-
-        </div>
+        <div class="table__body table__body_loading" id="ssl"></div>
     </div>
     <div class="service__buttons">
         <a class="button button_colored service__button" href="https://my.datahata.by/"><span>Заказать</span></a>
