--- a/datacenter/layouts/_default/single-colo.html
+++ b/datacenter/layouts/_default/single-colo.html
@@ -1,17 +1,14 @@
 {{ define "main" }}
+
 <section class="services section-padding">
     <div class="container services__container">
-        {{ if .Params.Server }}
         <h1 class="title">Размещение серверного <br> оборудования - {{.Params.ContentTitle}}</h1>
-        {{else}}
-        <h1 class="title"></h1>
-        {{end}}
-        <div class="services__content" id="{{.Params.Id}}">
+        <div class="services__content">
             <div class="services__wrapper">
                 {{ .Content }}
                 {{ if .Params.additional_content }}
                 <div class="additional-content">
-                    {{ partial "components/services/colo/_additional-services.html" . }}
+                    {{ partial "components/services/_additional-services.html" . }}
                 </div>
                 {{ end }}
             </div>
