feat: add client

--- a/datacenter-project/#src/scss/style.scss
+++ b/datacenter-project/#src/scss/style.scss
@@ -51,7 +51,7 @@
 @import "components/services/services";
 
 
-//for clients
+//for client
 
 @import "./components/for-clients/payments";
 @import "./components/for-clients/document";
