--- a/datacenter/layouts/shortcodes/client/visited.html
+++ b/datacenter/layouts/shortcodes/client/visited.html
@@ -15,7 +15,10 @@
                 удостоверение).</p>
         </div>
         <div class="image__container">
-            <img src="img/visit/City.png" alt="section-img">
+            <picture>
+                <source srcset="/img/visit/City.webp" type="image/webp">
+                <img src="/img/visit/City.png" alt="section-img">
+            </picture>
         </div>
 
     </div>
