--- a/datacenter/layouts/shortcodes/company/contacts.html
+++ b/datacenter/layouts/shortcodes/company/contacts.html
@@ -1,1 +1,78 @@
-{{partial "components/company/contacts/_contacts.html" .}}
+<section class="contacts section-padding">
+    <div class="container">
+        <div class="layout-2-column">
+            <h1 class="contacts__title">Наши контакты</h1>
+            <div class="contacts__info">
+                <h4>Отдел продаж</h4>
+                <div class="contact">
+                    Телефоны
+                    <p><span><a class="link link_dark" href="tel:{{.Site.Params.Phone1}}" target="_blank">{{.Site.Params.Phone1}} (A1)</a></span></p>
+                    <p><span><a class="link link_dark" href="tel:{{.Site.Params.Phone2}}" target="_blank">{{.Site.Params.Phone2}} (MTC)</a></span></p>
+                </div>
+                <div class="contact">
+                    Факс
+                    <p><span>{{ .Site.Params.Fax }}</span></p>
+                </div>
+                <div class="contact">
+                    Skype
+                    <p><span>{{.Site.Params.Skype}}</span></p>
+                </div>
+                <div class="contact">
+                    Telegram
+                    <p><span><a href={{.Site.Params.Telegram}} target="_blank">{{ safeHTML (replace .Site.Params.Telegram "https://t.me/" " ")}}
+                    </a></span></p>
+                </div>
+                <div class="contact">
+                    Почта
+                    <p><span><a class="link link_dark" href="mailto:{{.Site.Params.Email}}" target="_blank">{{.Site.Params.Email}}</a></span></p>
+                </div>
+                <div class="contact">
+                    Время работы
+                    <p><span>с 9:00 до 18:00 | ПН - ПТ</span></p>
+                </div>
+                <h4>Тех.поддержка</h4>
+                <div>
+                    <div class="contact">
+                        Телефоны
+                        <p><span><a href="tel:{{.Site.Params.SupportPhone1}}" target="_blank">{{.Site.Params.SupportPhone1}} (A1)</a></span></p>
+                        <p><span><a href="tel:{{.Site.Params.SupportPhone2}}" target="_blank">{{.Site.Params.SupportPhone2}} (MTC)</a></span></p>
+                    </div>
+                    <div class="contact">
+                        Skype
+                        <p><span>{{.Site.Params.SupportSkype}}</span></p>
+                    </div>
+                    <div class="contact">
+                        Telegram
+                        <p><span><a href={{.Site.Params.SupportTelegram}} target="_blank">{{ safeHTML (replace .Site.Params.SupportTelegram "https://t.me/" " ")}}</a></span></p>
+                    </div>
+                    <div class="contact">
+                        Почта
+                        <p><span><a href="mailto:{{.Site.Params.SupportEmail}}" target="_blank">{{.Site.Params.SupportEmail}}</a></span></p>
+                    </div>
+                </div>
+            </div>
+            <div class="contacts__img image__container">
+                <picture>
+                    <source srcset="/img/contacts/email.webp" type="image/webp">
+                    <img src="/img/contacts/email.png" alt="section-img">
+                </picture>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="contacts-mob">
+    <div class="contacts-mob__content">
+        <div class="container">
+            <h1 class="contacts-mob__title">Наши контакты</h1>
+            {{ partial "components/base/_contacts-nav__sales.html" . }}
+        </div>
+    </div>
+    <div class="contacts-mob__content contacts-mob__content_background">
+        <div class="container">
+            <h2 class="contacts-mob__title">Тех.поддержка</h2>
+            {{ partial "components/base/_contacts-nav__support.html" . }}
+        </div>
+    </div>
+</section>
+
+
