--- a/datacenter/layouts/shortcodes/company/map.html
+++ b/datacenter/layouts/shortcodes/company/map.html
@@ -1,1 +1,35 @@
-{{ partial "components/company/map/_map" . }}
+<section class="maps">
+    <div class="container">
+        <h1 class="map__title">Схема проезда</h1>
+        <p class="map__subtitle">Колхозная улица 2б, Минск, Беларусь. Офис ООО "Датахата"</p>
+        <div class="map__content">
+            <div class="map__card">
+                <p class="map__card-title">Схема проезда к нашему офису</p>
+                <div class="map__card_fluid-1">
+                    <div class="map">
+                        <script class="ymap_lazy" async
+                                data-src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A951ab65053310986ac97b09f23016f6fa7f12f14235359b3743655eb5d8bb2c2&amp;width=100%25&amp;height=100%25&amp;lang=ru_RU&&amp;scroll=true"></script>
+                    </div>
+                </div>
+            </div>
+            <div class="map__card">
+                <p class="map__card-title">Как попасть в дата-центр через проходную завода (пешком)</p>
+                <div class="map__card_fluid-2">
+                    <div class="map">
+                        <script class="ymap_lazy" async
+                                data-src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Adbcf7b76660f296a6ab95aa6b10ba4e772cff349978c3be4fd08d946be03ee78&amp;width=100%25&amp;height=100%25&amp;lang=ru_RU&amp;scroll=true"></script>
+                    </div>
+                </div>
+            </div>
+            <div class="map__card">
+                <p class="map__card-title">Как попасть в дата-центр через транспортную проходную (на автомобиле)</p>
+                <div class="map__card_fluid-3">
+                    <div class="map">
+                        <script class="ymap_lazy" async
+                                data-src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abfd54c0ddeb3d5e73e9b0ff64a54d0041dc8d30c0d919f899087c1a032724871&amp;width=100%25&amp;height=100%25&amp;lang=ru_RU&amp;scroll=true"></script>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
