--- a/datacenter/layouts/shortcodes/services/dedicated/dedicated.html
+++ b/datacenter/layouts/shortcodes/services/dedicated/dedicated.html
@@ -7,7 +7,31 @@
     физического сервера в месяц, можно, используя приведенный ниже калькулятор-конфигуратор:</p>
 
 
-    {{partial "components/services/dedic/_dedic-table.html"}}
+    <div class="table">
+        <div class="table__body table__body_dedicated table__body_loading">
+            {{partial "components/base/_calculator-configurator.html"}}
+        </div>
+    </div>
+    <p class="paragraph">Под заказ (2-5 рабочих дней) доступны любые конфигурации серверов.</p>
+    <div class="service__info">
+        <p class="paragraph paragraph_bold">В абонентскую плату включено:</p>
+        <ul class="list">
+            <li>Автоматическая установка и переустановка ОС (Centos 6/7, Debian 7/8, Ubuntu,
+                FreeBSD, Windows);
+            </li>
+            <li>Автоматическая загрузка образа восстановления системы по сети;</li>
+            <li>Подключение к каналу связи на скорости 1 Gb/s;</li>
+            <li>IP KVM, доступный вам постоянно через VPN-соединение;</li>
+            <li>Гарантированное электропитание;</li>
+            <li>Круглосуточная техническая поддержка;</li>
+            <li>Предоставление одного IP-адреса;</li>
+            <li>Бесплатный белорусский трафик;</li>
+            <li>1 Tb исходящего и 1 Tb входящего внешнего трафика. В случае превышения
+                предоплаченного трафика стоимость следующего входящего 1 Gb составит 0,05 рублей,
+                исходящего 1 Gb составит 0,1 рублей.
+            </li>
+        </ul>
+    </div>
 
 <!--    <p class="paragraph">Аренда выделенного сервера в ЦОД "Датахата" в Минске (Беларусь) позволит Вам в большей мере-->
 <!--        сосредоточиться на развитии бизнес-проекта, а не на вопросах приобретения серверного оборудования, программного-->
