--- a/datacenter/layouts/partials/components/layout/_header.html
+++ b/datacenter/layouts/partials/components/layout/_header.html
@@ -1,7 +1,10 @@
 <header class="header">
     <div class="container header-container">
-        <a class="logo logo_header" href="/index.html">
-            <img src="/img/logo/dh.png" alt="logo" width="114" height="41">
+        <a class="logo logo_header" href="/">
+            <picture>
+                <source srcset="/img/logo/dh.webp" type="image/webp">
+                <img src="/img/logo/dh.png" alt="logo" width="114" height="41">
+            </picture>
         </a>
         {{ partial "components/base/_header-nav.html" .}}
         <a class="button button_bordered header-button" href="https://my.datahata.by/"><span>Вход</span></a>
