--- a/datacenter/layouts/shortcodes/client/instruction.html
+++ b/datacenter/layouts/shortcodes/client/instruction.html
@@ -7,16 +7,16 @@
                 необходимо:
             </p>
             <ul class="list">
-                <li>Ознакомиться с тарифами на <a href="unit.html">Размещение стоечных
-                    серверов</a> и <a href="tower.html">Размещение башенного сервера</a>;
+                <li>Ознакомиться с тарифами на <a href="/services/colocation/rackmounted/">Размещение стоечных
+                    серверов</a> и <a href="/services/colocation/tower/">Размещение башенного сервера</a>;
                 </li>
                 <li>Зарегистрироваться в нашей <a href="https://my.datahata.by/">биллинговой системе</a>;</li>
                 <li>В <a href="https://my.datahata.by/">биллинговой системе</a> заказать услугу "Размещение сервера" -
                     "Размещение стоечного сервера" или "Размещение башенного сервера", указать там все параметры
                     оборудования (мощность блока питания, количество портов и IP);
                 </li>
-                <li>Оплатить полученный счет - <a href="payments.html">способы оплаты</a>;</li>
-                <li>Связаться с нашей <a href="contacts.html">службой продаж</a> и заехать к нам в офис за
+                <li>Оплатить полученный счет - <a href="/client/payments/">способы оплаты</a>;</li>
+                <li>Связаться с нашей <a href="/company/contacts/">службой продаж</a> и заехать к нам в офис за
                     оригиналами документов;
                 </li>
                 <li>Привезти сервер в дата-центр. Наши инженеры установят его в стойку, и предоставят вам
@@ -29,13 +29,16 @@
                     Так же, вы можете принести свою полку, согласовав ее размеры с нашими специалистами;
                 </li>
                 <li>Ознакомиться с условиями Публичного договора вы можете у нас на сайте <a
-                        href="document.html">Публичный договор возмездного оказания услуг</a> или в <a
+                        href="/client/document/">Публичный договор возмездного оказания услуг</a> или в <a
                         href="https://my.datahata.by/">биллинговой системе</a> раздел "Клиент" - "Договоры".
                 </li>
             </ul>
         </div>
         <div class="instruction__img image__container">
-            <img src="img/instruction/cloud_database.png" alt="section-img">
+            <picture>
+                <source srcset="/img/instruction/cloud_database.webp" type="image/webp">
+                <img src="/img/instruction/cloud_database.png" alt="section-img">
+            </picture>
         </div>
 
 
