--- a/datacenter/layouts/shortcodes/services/colocation/server.html
+++ b/datacenter/layouts/shortcodes/services/colocation/server.html
@@ -23,11 +23,23 @@
             {{ end }}
         </div>
     </div>
-
     <div class="service__buttons">
         <a class="button button_colored service__button" href="https://my.datahata.by/"><span>Заказать</span></a>
-        <button id={{ .Get "id_btn" }} class="button button_bordered"><span>Рассчитать стоимость</span></button>
+        <button class="button button_bordered" id={{.Get "id"}}>
+        <span>Рассчитать стоимость</span>
+        </button>
     </div>
-    {{partial "components/services/colo/_colo-subscription.html" . }}
+    <div class="service__info">
+        <p class="paragraph paragraph_bold">В абонентскую плату включено:</p>
+        <ul class="list">
+            <li>1 IPv4 и 1 IPv6 адрес;</li>
+            <li>1 порт подключения к коммутатору 1 Gb/s;</li>
+            <li>1 Tb входящего и 1 Tb исходящего внешнего трафика. В случае превышения
+                предоплаченного трафика стоимость следующего входящего 1 Gb составит 0,05
+                рублей, исходящего 1 Gb составит 0,1 рублей.
+            </li>
+        </ul>
+        <p class="paragraph">Инструкция: <a class="link link_light" href="{{.Site.Params.InstructionLink}}">Как разместить сервер</a></p>
+    </div>
 </div>
 
