feat: add articles

--- a/datacenter-project/#src/scss/style.scss
+++ b/datacenter-project/#src/scss/style.scss
@@ -59,11 +59,12 @@
 //info
 @import "./components/info/advices";
 @import "./components/info/new-partners";
+@import "./components/info/article";
 
 
 
 
-@import "./components/article";
+
 @import "./components/error";
 
 
