--- a/datacenter/layouts/shortcodes/info/review.html
+++ b/datacenter/layouts/shortcodes/info/review.html
@@ -1,8 +1,8 @@
 <section class="review section-padding">
     <div class="container review__container">
-        <h2 class="title">Отзывы о нашем дата-центре</h2>
+        <h1 class="title">Отзывы о нашем дата-центре</h1>
         <div class="review__content">
-            {{ range  first 4  .Site.Data.reviews }}
+            {{ range  .Site.Data.reviews }}
             <div class="review__card">
                 <div class="review__card-inner">
                     <p class="card-inner__title">{{ .name }}</p>
@@ -15,7 +15,6 @@
             </div>
             {{ end }}
         </div>
-<!--        <a href="/info/review/" class="button button_bordered review__button"><span>Смотреть ещё отзывы</span></a>-->
     </div>
 </section>
 
