--- a/datacenter/static/css/style.css
+++ b/datacenter/static/css/style.css
@@ -3160,159 +3160,58 @@ ymaps {
   margin-top: 3rem;
 }
 
-.article-section h1 {
-  font-weight: bold;
-  font-size: 4.6rem;
-  line-height: 120%;
-  text-align: left;
-  margin-bottom: 2.14rem;
+.article picture img {
+  max-width: 100%;
+  height: auto;
+  -o-object-fit: contain;
+     object-fit: contain;
+  margin: 1rem 0 2rem;
 }
 
-.article-section p {
-  margin-bottom: 1rem;
-}
-
-.article-section ol,
-.article-section ul,
-.article-section li,
-.article-section p {
+.article ol,
+.article ul,
+.article li,
+.article p {
   font-size: 1.8rem;
   line-height: 160%;
-  margin-bottom: 1rem;
+  margin: 1rem 0;
 }
 
-.article-section ul li {
+.article ul li {
   list-style-type: disc;
   margin-left: 2rem;
   margin-top: 1rem;
 }
 
-.article-section h2 {
-  font-weight: 700;
-  font-size: 3.6rem;
-  line-height: 160%;
-  margin-bottom: 1.43rem;
-}
-
-.article-section h3 {
-  font-weight: 700;
-  font-size: 3rem;
-  line-height: 160%;
-  margin-bottom: 1.43rem;
-}
-
-.article-section h4 {
-  font-weight: 700;
-  font-size: 2rem;
-  line-height: 160%;
-}
-
-.article-section h5 {
-  font-weight: 700;
-  font-size: 1.8rem;
-  line-height: 160%;
-}
-
-.article-title {
-  margin-top: 3rem;
-}
-
-.article-img {
-  width: 100%;
-  margin-bottom: 2rem;
-}
-
-.article-img img {
-  width: 100%;
-  max-width: 1200px;
-  height: 500px;
-  border-radius: 20px;
-}
-
-.article-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.article-container h1 {
-  text-align: left;
-  margin-bottom: 2.14rem;
-}
-
-.container-img {
-  width: 100%;
-  margin-bottom: 2rem;
-}
-
-.container-img img {
-  width: 100%;
-  max-width: 635px;
-  height: auto;
-}
-
-.article-container-item {
-  margin-bottom: 3.57rem;
-}
-
-.article-container-item p {
-  margin-bottom: 1rem;
-}
-
-.article-container-item p span {
-  font-weight: 700;
-}
-
-.article-container-item ol,
-.article-container-item ul,
-.article-container-item li,
-.article-container-item p {
-  font-size: 1.8rem;
-  line-height: 160%;
-}
-
-.article-container-item ol,
-.article-container-item ul {
-  margin-bottom: 1rem;
-}
-
-.article-container-item a {
+.article a {
   text-decoration: underline;
+  color: #0f4d96;
 }
 
-.article-container-item ol li {
+.article ol li {
   list-style-type: none;
 }
 
-.article-container-item ul li {
-  list-style-type: disc;
-  margin-left: 2rem;
-  margin-top: 1rem;
+.article h2 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 3rem;
+  line-height: 120%;
+  margin-top: 2rem;
 }
 
-.article-container-item h2 {
+.article h3 {
+  font-style: normal;
   font-weight: 700;
   font-size: 2.4rem;
-  line-height: 160%;
-  margin-bottom: 1.43rem;
+  line-height: 120%;
 }
 
-.article-container-item h3 {
+.article h4 {
+  font-style: normal;
   font-weight: 700;
   font-size: 2rem;
-  line-height: 160%;
-  margin-bottom: 1.43rem;
-}
-
-.article-container-item h4,
-.article-container-item .title-item {
-  font-weight: 700;
-  font-size: 1.8rem;
-  line-height: 160%;
+  line-height: 120%;
 }
 
 .error-main {
@@ -3905,17 +3804,11 @@ ymaps {
     display: block;
   }
 
-  .article-section h1 {
-    margin-top: 0rem;
+  .article h2 {
+    font-style: normal;
+    font-weight: 700;
     font-size: 2.4rem;
-  }
-
-  .article-title {
-    margin-top: 0rem;
-  }
-
-  .article-container h1 {
-    font-size: 2.4rem;
+    line-height: 120%;
   }
 }
 
@@ -4318,12 +4211,18 @@ ymaps {
     height: 132px;
   }
 
-  .article-img img {
-    height: 195px;
+  .article h3 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 2rem;
+    line-height: 120%;
   }
 
-  .article-img {
-    height: 195px;
+  .article h4 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 1.8rem;
+    line-height: 120%;
   }
 }
 
@@ -4355,20 +4254,6 @@ ymaps {
 
   .main-section-partners .section-partners-item #img-wildber {
     max-width: 103px;
-  }
-
-  .font {
-    font-size: 12px;
-  }
-}
-
-@media (max-width: 319px) {
-  .article-section ul li {
-    margin-left: 0.5rem;
-  }
-
-  .article-container-item ul li {
-    margin-left: 0.5rem;
   }
 }
 
@@ -4580,14 +4465,6 @@ ymaps {
 }
 
  @media (max-width: 320px){
-
-@supports (-webkit-appearance:none){
-
-}
-
-}
-
- @media (max-width: 319px){
 
 @supports (-webkit-appearance:none){
 
