--- a/datacenter/static/css/style.css
+++ b/datacenter/static/css/style.css
@@ -3214,6 +3214,14 @@ ymaps {
   line-height: 120%;
 }
 
+.article__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 2rem;
+  gap: 2rem;
+}
+
 .error-main {
   position: absolute;
   top: 0;
@@ -3809,6 +3817,13 @@ ymaps {
     font-weight: 700;
     font-size: 2.4rem;
     line-height: 120%;
+  }
+
+  .article__block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
   }
 }
 
